# pg_validate_extupgrade

./: Cargo.toml  README  README.md
.github/workflows/: ci.yml
src/: compare.rs  extension.rs  guc.rs  lib.rs  main.rs  pgdiff.rs  pgtype.rs
src/extension/: pg_aggregate.rs  pg_attribute.rs  pg_cast.rs  pg_class.rs  pg_constraint.rs  pg_event_trigger.rs  pg_extconfig.rs  pg_foreign_data_wrapper.rs  pg_index.rs  pg_namespace.rs  pg_opclass.rs  pg_operator.rs  pg_opfamily.rs  pg_policy.rs  pg_proc.rs  pg_range.rs  pg_rewrite.rs  pg_statistic_ext.rs  pg_trigger.rs  pg_type.rs
tests/fixtures/: Makefile  pg_broken_extupgrade--head-1.0--head-1.1.sql  pg_broken_extupgrade--head-1.0.sql  pg_broken_extupgrade--head-1.1.sql  pg_broken_extupgrade--pg13-1.0.sql  pg_broken_extupgrade--pg13-1.1.sql  pg_broken_extupgrade--pg92-1.0.sql  pg_broken_extupgrade--pg92-1.1.sql  pg_broken_extupgrade.control  pg_broken_extupgrade.json  pg_broken_extupgrade.toml
