[package]
name = "pg_validate_extupgrade"
version = "1.0.0-beta"
authors = ["Julien Rouhaud <julien.rouhaud@free.fr>"]
edition = "2018"
description = "A tool to validate PostgreSQL extension upgrade scripts"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["postgres", "postgresql", "extension"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
postgres = "0.19"
whoami = "1.1"
diffy = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
